--- a/exam_board/src/main/resources/application.yml
+++ b/exam_board/src/main/resources/application.yml
@@ -4,14 +4,19 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/exam-board
+    url: jdbc:mysql://localhost:3306/exam_board
     username: root
     password: 2738
 
   jpa:
     hibernate:
-      ddl-auto: validate #create
+      ddl-auto: create #validate
     show-sql: true
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
 ---
 
 spring:
